--- a/number-guessing/number-guessing-game.html
+++ b/number-guessing/number-guessing-game.html
@@ -38,14 +38,24 @@
     </div>
 
     <div class="ResultParas">
-        <p class="guess"></p>
+        <p class="guesses"></p>
         <p class="lastResult"></p>
         <p class="lowOrHi"></p>
 
     </div>
 
     <script>
-            // hoge
+        let randomNumber = Math.floor(Math.random() * 100) + 1;
+
+        const guesses = document.querySelector('.guesses');
+        const lastResult = document.querySelector('.lastResult');
+        const lowOrHi = document.querySelector('.lowOrHi');
+
+        const guessSubmit = document.querySelector('.guessSubmit');
+        const guessField = document.querySelector('.guessField');
+
+        let guessCount = 1;
+        let resetButton;
     </script>
 </body>
 
