--- a/number-guessing/number-guessing-game.html
+++ b/number-guessing/number-guessing-game.html
@@ -52,6 +52,8 @@
         const lowOrHi = document.querySelector('.lowOrHi');
 
         const guessSubmit = document.querySelector('.guessSubmit');
+        guessSubmit.addEventListener('click', checkGuess);
+
         const guessField = document.querySelector('.guessField');
 
         let guessCount = 1;
@@ -60,28 +62,29 @@
         function checkGuess() {
             let userGuess = Number(guessField.value);
             if (guessCount === 1) {
-                guess.textContent = 'Previous guesses: ';
+                guesses.textContent = 'Previous guesses: ';
             }
-            guess.textContent += userGuess + ' ';
+            guesses.textContent += userGuess + ' ';
+
+            if (userGuess === randomNumber) {
+                lastResult.textContent = 'Congratulations! You got it right!';
+                lastResult.style.backgroundColor = 'green';
+                lowOrHi.textContent = '';
+                setGameOver();
+            } else if (guessCount === 10) {
+                lastResult.textContent = '!!!GAME OVER!!!';
+                setGameOver();
+            } else {
+                lastResult.textContent = 'Wrong!';
+                lastResult.style.backgroundColor = 'red';
+                if (userGuess < randomNumber) {
+                    lowOrHi.textContent = 'Last guess was too low!';
+                } else if (userGuess > randomNumber) {
+                    lowOrHi.textContent = 'Last guess was too high!';
+                }
+            }
         }
 
-        if (userGuess === randomNumber) {
-            lastResult.textContent = 'Congratulations! You got it right!';
-            lastResult.style.backgroundColor = 'green';
-            lowOrHi.textContent = '';
-            setGameOver();
-        } else if (guessCount === 10) {
-            lastResult.textContent = '!!!GAME OVER!!!';
-            setGameOver();
-        } else {
-            lastResult.textContent = 'Wrong!';
-            lastResult.style.backgroundColor = 'red';
-            if (userGuess < randomNumber) {
-                lowOrHi.textContent = 'Last guess was too low!';
-            } else if (userGuess > randomNumber) {
-                lowOrHi.textContent = 'Last guess was too high!';
-            }
-        }
 
         guessCount++;
         guessField.value = '';
