--- a/number-guessing/number-guessing-game.html
+++ b/number-guessing/number-guessing-game.html
@@ -41,7 +41,6 @@
         <p class="guesses"></p>
         <p class="lastResult"></p>
         <p class="lowOrHi"></p>
-
     </div>
 
     <script>
@@ -57,6 +56,7 @@
         const guessField = document.querySelector('.guessField');
 
         let guessCount = 1;
+        guessField.focus();
         let resetButton;
 
         function checkGuess() {
