--- a/silly-story-generator/index.html
+++ b/silly-story-generator/index.html
@@ -46,7 +46,7 @@
         <label for="uk">US</label><input id="uk" type="radio" name="ukus" value="uk">
     </div>
     <div>
-        <button class="randomsize">Generate random story</button>
+        <button class="randomize">Generate random story</button>
     </div>
     <p class="story"></p>
 
