--- a/silly-story-generator/index.html
+++ b/silly-story-generator/index.html
@@ -43,7 +43,7 @@
     </div>
     <div>
         <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-        <label for="uk">US</label><input id="uk" type="radio" name="ukus" value="uk">
+        <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
     </div>
     <div>
         <button class="randomize">Generate random story</button>
