Build your own function: The basic function

--- a/2-building-blocks/function-start.html
+++ b/2-building-blocks/function-start.html
@@ -39,6 +39,24 @@
 <body>
     <button>Display message box</button>
     <script>
+        function displayMessage() {
+            const html = document.querySelector('html');
+            const panel = document.createElement('div');
+            panel.setAttribute('class', 'msgBox');
+            html.appendChild(panel);
+
+            const msg = document.createElement('p');
+            msg.textContent = 'This is a message box';
+            panel.appendChild(msg);
+
+            const closeBtn = document.createElement('button');
+            closeBtn.textContent = 'x';
+            panel.appendChild(closeBtn);
+
+            closeBtn.onclick = function () {
+                panel.parentNode.removeChild(panel);
+            }
+        }
 
     </script>
 </body>
