Build your own function: Calling the function

--- a/2-building-blocks/function-start.html
+++ b/2-building-blocks/function-start.html
@@ -58,6 +58,9 @@
             }
         }
 
+        const btn = document.querySelector('button');
+        btn.onclick = displayMessage;
+
     </script>
 </body>
 
