Build your own function: Improving the function with parameters

--- a/2-building-blocks/function-start.html
+++ b/2-building-blocks/function-start.html
@@ -39,14 +39,14 @@
 <body>
     <button>Display message box</button>
     <script>
-        function displayMessage() {
+        function displayMessage(msgText, msgType) {
             const html = document.querySelector('html');
             const panel = document.createElement('div');
             panel.setAttribute('class', 'msgBox');
             html.appendChild(panel);
 
             const msg = document.createElement('p');
-            msg.textContent = 'This is a message box';
+            msg.textContent = msgText;
             panel.appendChild(msg);
 
             const closeBtn = document.createElement('button');
@@ -59,7 +59,9 @@
         }
 
         const btn = document.querySelector('button');
-        btn.onclick = displayMessage;
+        btn.onclick = function () {
+            displayMessage('Woo, this is a different message!');
+        }
 
     </script>
 </body>
