--- a/2-building-blocks/function-start.html
+++ b/2-building-blocks/function-start.html
@@ -14,7 +14,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 200px;
+            width: 242px;
             background: #eee;
         }
 
@@ -22,6 +22,9 @@
             line-height: 1.5;
             padding: 10px 20px;
             color: #333;
+            padding-left: 82px;
+            background-position: 25px center;
+            background-repeat: no-repeat;
         }
 
         .msgBox button {
@@ -56,11 +59,23 @@
             closeBtn.onclick = function () {
                 panel.parentNode.removeChild(panel);
             }
+
+            if (msgType === 'warning') {
+                msg.style.backgroundImage = 'url(images/warning.png)';
+                panel.style.backgroundColor = 'red';
+            } else if (msgType === 'chat') {
+                msg.style.backgroundImage = 'url(images/chat.png)';
+                panel.style.backgroundColor = 'aqua';
+            } else {
+                msg.style.paddingLeft = '20px';
+            }
         }
 
         const btn = document.querySelector('button');
         btn.onclick = function () {
             displayMessage('Woo, this is a different message!');
+            displayMessage('Your inbox is almost full - delete some mails', 'warning');
+            displayMessage('Brian: Hi there, how are you today?', 'chat');
         }
 
     </script>
