Image gallery: fix css path

--- a/2-building-blocks/gallery/index.html
+++ b/2-building-blocks/gallery/index.html
@@ -6,7 +6,7 @@
 
     <title>Image gallery</title>
 
-    <link rel="stylesheet" href="gallery-style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
